@@ -2,7 +2,7 @@
 description = Classical Tiling for Turkey reduced
 calculation_mode = classical
 concurrent_tasks = 4
-num_tiles = 4
+sites_per_tile = 10
 random_seed = 323
 
 [geometry]
